Make Ctrl+Space work again

Qt5.4 appears to have caused this issue. Test using showkey, mc, emacs

Thanks to Chirag Anand anand chirag gmail com for fix

BUG: 341157
REVIEW: 122711